Added copyright information
Author: dustin
Date: 1997/01/05 08:41:00

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-40

--- a/c/c/net/tcp/cracker/Makefile
+++ b/c/c/net/tcp/cracker/Makefile
@@ -1,3 +1,5 @@
+# Copyright 1997 SPY Internetworking
+# $Id: Makefile,v 1.2 1997/01/05 08:41:00 dustin Exp $
 INCLUDES=
 CFLAGS=-O2 $(INCLUDES)
 LDFLAGS=-s
