--- a/objc/objc/webserv/misc/Makefile.in
+++ b/objc/objc/webserv/misc/Makefile.in
@@ -1,5 +1,5 @@
 # Copyright (c) 1997  Dustin Sallings
-# $Id: Makefile,v 1.2 1997/04/15 06:11:41 dustin Exp $
+# $Id: Makefile.in,v 1.1 1997/04/15 21:49:48 dustin Exp $
 
 .SUFFIXES: .m .o
 
