--- a/c/c/X11/motif/phonebook/Makefile
+++ b/c/c/X11/motif/phonebook/Makefile
@@ -1,10 +1,10 @@
 # Copyright (c) 1997  Dustin Sallings
 #
-# $Id: Makefile,v 1.2 1997/06/16 13:50:40 dustin Exp $
+# $Id: Makefile,v 1.3 1997/06/16 23:57:23 dustin Exp $
 
 SHELL=/bin/sh
 LBIN=/usr/local/bin
-CDEBUGFLAGS=  -g
+CDEBUGFLAGS=  -O2
 
 LIBS=-lXm -lXt -lX11
 LDFLAGS= $(LIBS)
@@ -16,7 +16,7 @@ CFLAGS=$(CDEBUGFLAGS)
 PBKOBJS=phonebook.o callbacks.o widgets.o fields.o find.o
 SRC=phonebook.c callbacks.c widgets.c find.c
 EXES=phonebook
-JUNK=fields.c fields.h
+JUNK=fields.c fields.h core
 
 all:	$(EXES)
 
