--- a/c/c/X11/motif/phonebook/Makefile
+++ b/c/c/X11/motif/phonebook/Makefile
@@ -1,20 +1,20 @@
 # Copyright (c) 1997  Dustin Sallings
 #
-# $Id: Makefile,v 1.3 1997/06/16 23:57:23 dustin Exp $
+# $Id: Makefile,v 1.4 1997/07/15 13:50:26 dustin Exp $
 
 SHELL=/bin/sh
 LBIN=/usr/local/bin
-CDEBUGFLAGS=  -O2
+CDEBUGFLAGS= -I/usr/local/Hughes/include -O2
 
-LIBS=-lXm -lXt -lX11
-LDFLAGS= $(LIBS)
+LIBS=-lXm -lXt -lX11 -lmsql
+LDFLAGS=-L/usr/local/Hughes/lib $(LIBS)
 
 CC=cc
 RANLIB=:
 
 CFLAGS=$(CDEBUGFLAGS)
-PBKOBJS=phonebook.o callbacks.o widgets.o fields.o find.o
-SRC=phonebook.c callbacks.c widgets.c find.c
+PBKOBJS=phonebook.o callbacks.o widgets.o fields.o find.o database.o
+SRC=phonebook.c callbacks.c widgets.c find.c database.c
 EXES=phonebook
 JUNK=fields.c fields.h core
 
