Did some autoconf stuff.
Author: dustin
Date: 1997/09/20 07:18:18
    Did some autoconf stuff.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-64

--- a/c/c/radius/Makefile.in
+++ b/c/c/radius/Makefile.in
@@ -1,17 +1,20 @@
 #
 # Copyright (c) 1997  Dustin Sallings
-# $Id: Makefile.in,v 1.1 1997/09/20 07:04:39 dustin Exp $
+# $Id: Makefile.in,v 1.2 1997/09/20 07:18:18 dustin Exp $
 #
 
-CFLAGS=-O2
-LIBS=
+CC=@CC@
+CFLAGS=@CFLAGS@
+LIBS=@LIBS@
 LDFLAGS=$(LIBS)
 
 EXES=parsedetail   postprocess
 OBJS=parsedetail.o postprocess.o
 SRC= parsedetail.c postprocess.c
 
+AUTOJUNK=config.guess config.status config.log config.cache Makefile
+
 all: $(EXES)
 
 clean:
-	rm -f $(EXES) $(OBJS)
+	rm -f $(EXES) $(OBJS) $(AUTOJUNK)
