Updated for stuff that got moved.
Author: dustin
Date: 1997/12/12 18:35:47
   Updated for stuff that got moved.

imported from: dustin@spy.net--projects/snippets--perl--1.0--patch-21

--- a/perl/perl/monitor/lib/statlib.conf
+++ b/perl/perl/monitor/lib/statlib.conf
@@ -1,5 +1,5 @@
 # Statlib configuration
-# $Id: statlib.conf,v 1.1 1997/12/12 18:29:48 dustin Exp $
+# $Id: statlib.conf,v 1.2 1997/12/12 18:35:47 dustin Exp $
 
 $home            = "/home/monitor";
 $libdir          = "$home/lib";
@@ -22,7 +22,7 @@ $quickDisk       = "$webroot/out/stupid.disk";
 $quickGG         = "$webroot/out/goldengate";
 
 # Holder of the manual entries.
-$appendBase="$libdir/append";
+$appendBase="$home/logs/append";
 
 # Pager stuff
 $pageServer="pager.software.net";
