--- a/perl/perl/monitor/lib/statlib.conf
+++ b/perl/perl/monitor/lib/statlib.conf
@@ -1,11 +1,16 @@
 # Statlib configuration
-# $Id: statlib.conf,v 1.2 1997/12/12 18:35:47 dustin Exp $
+# $Id: statlib.conf,v 1.3 1997/12/14 21:32:46 dustin Exp $
+
+$mailDomain      = "west.spy.net";
+
+$logFiles        = "/var/log/messages";
 
 $home            = "/home/monitor";
 $libdir          = "$home/lib";
 $ggtestdir       = "/home/monitor/goldengate_test";
 
-$webroot         = "/home/barbershop/stats";
+$webroot         = "/home/monitor/webroot";
+$webtop          = "/~dustin/stats";
 
 $alarmsList      = "$libdir/alarms";
 $allMachinesFile = "$libdir/disklist";
@@ -21,12 +26,15 @@ $quickApp        = "$webroot/out/quickapp";
 $quickDisk       = "$webroot/out/stupid.disk";
 $quickGG         = "$webroot/out/goldengate";
 
+# Webserver stuffs
+$webstatus       = "$webroot/out/webstatus.shtml";
+
 # Holder of the manual entries.
 $appendBase="$home/logs/append";
 
 # Pager stuff
-$pageServer="pager.software.net";
-$snppPort=1041;
+$pageServer="pager";
+$snppPort=1031;
 
 # stuff for netmon2
 $netmonPlotdata="$libdir/plotdata";
