--- a/c/c/net/tcp/redirect/redir.conf
+++ b/c/c/net/tcp/redirect/redir.conf
@@ -1,8 +1,9 @@
 // Dustin's IP redirector configuration
 // Copyright (c) 1998  Dustin Sallings
-// $Id: redir.conf,v 1.1 1998/01/02 02:49:50 dustin Exp $
+// $Id: redir.conf,v 1.2 1998/01/02 05:40:34 dustin Exp $
 
 etc {
+    debug=0;
 }
 
 ports {
@@ -22,5 +23,31 @@ ports {
     1984 {
 	remote_addr=keyhole.west.spy.net;
 	remote_port=1984;
+    }
+    2010 {
+	iscluster=1;
+	cluster {
+	    clus1 {
+		remote_addr=keyhole.west.spy.net;
+		remote_port=23;
+	    }
+	    clus2 {
+		remote_addr=bob.west.spy.net;
+		remote_port=23;
+	    }
+	}
+    }
+    8080 {
+	iscluster=1;
+	cluster {
+	    clus1 {
+		remote_addr=www.antigates.com;
+		remote_port=80;
+	    }
+	    clus2 {
+		remote_addr=submission.west.spy.net;
+		remote_port=80;
+	    }
+	}
     }
 }
