Do timeouts on tcp connections.
Author: dustin
Date: 1998/01/02 10:49:33
   Do timeouts on tcp connections.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-94

--- a/c/c/net/tcp/redirect/redir.conf
+++ b/c/c/net/tcp/redirect/redir.conf
@@ -1,6 +1,6 @@
 // Dustin's IP redirector configuration
 // Copyright (c) 1998  Dustin Sallings
-// $Id: redir.conf,v 1.4 1998/01/02 06:20:27 dustin Exp $
+// $Id: redir.conf,v 1.5 1998/01/02 10:49:34 dustin Exp $
 
 etc {
     debug=0;
@@ -46,6 +46,33 @@ ports {
 	    }
 	    clus2 {
 		remote_addr=submission.west.spy.net;
+		remote_port=80;
+	    }
+	}
+    }
+    8000 {
+	iscluster=1;
+	tcptimeout=5;
+	cluster {
+	    clus1 {
+		remote_addr=www1.netscape.com;
+		remote_port=80;
+	    }
+	    clus2 {
+		remote_addr=www2.netscape.com;
+		remote_port=80;
+	    }
+	    clus3 {
+		remote_addr=www3.netscape.com;
+		remote_port=80;
+	    }
+	    clus4 {
+		remote_addr=www4.netscape.com;
+		remote_port=80;
+	    }
+	    clus5 {
+		tcptimeout=1;
+		remote_addr=www5.netscape.com;
 		remote_port=80;
 	    }
 	}
