Pulled clustering out to be a modularish type thing.
Author: dustin
Date: 1998/01/05 00:15:29
   Pulled clustering out to be a modularish type thing.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-95

--- a/c/c/net/tcp/redirect/redir.conf
+++ b/c/c/net/tcp/redirect/redir.conf
@@ -1,9 +1,9 @@
 // Dustin's IP redirector configuration
 // Copyright (c) 1998  Dustin Sallings
-// $Id: redir.conf,v 1.5 1998/01/02 10:49:34 dustin Exp $
+// $Id: redir.conf,v 1.6 1998/01/05 00:15:32 dustin Exp $
 
 etc {
-    debug=0;
+    debug=6;
 }
 
 ports {
@@ -33,6 +33,18 @@ ports {
 	    }
 	    clus2 {
 		remote_addr=bob.west.spy.net;
+		remote_port=23;
+	    }
+	    clus3 {
+		remote_addr=bleu.west.spy.net;
+		remote_port=23;
+	    }
+	    clus4 {
+		remote_addr=pinkpanther.west.spy.net;
+		remote_port=23;
+	    }
+	    clus5 {
+		remote_addr=submission.west.spy.net;
 		remote_port=23;
 	    }
 	}
