--- a/c/c/net/tcp/redirect/Makefile.in
+++ b/c/c/net/tcp/redirect/Makefile.in
@@ -1,5 +1,5 @@
 # Copyright (c) 1998  Dustin Sallings
-# $Id: Makefile.in,v 1.2 1998/01/02 06:53:44 dustin Exp $
+# $Id: Makefile.in,v 1.3 1998/01/05 00:15:29 dustin Exp $
 
 SHELL=/bin/sh
 CC=@CC@
@@ -9,8 +9,8 @@ CFLAGS=@CFLAGS@ $(INCLUDES) $(DEFINES)
 LIBS=@LIBS@ readconfig/readconfig.a
 LDFLAGS=$(LIBS)
 
-OBJS=main.o sockets.o
-SRCS=main.c sockets.c
+OBJS=main.o sockets.o cluster.o
+SRCS=main.c sockets.c cluster.c
 EXES=redirect
 AUTOJUNK=config.h config.status config.cache config.log Makefile
 JUNK=$(OBJS) $(EXES)
