Configurable clustering is there, just nothing to configure.
Author: dustin
Date: 1998/01/06 08:03:27
    Configurable clustering is there, just nothing to configure.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-99

--- a/c/c/net/tcp/redirect/redir.conf
+++ b/c/c/net/tcp/redirect/redir.conf
@@ -1,6 +1,6 @@
 // Dustin's IP redirector configuration
 // Copyright (c) 1998  Dustin Sallings
-// $Id: redir.conf,v 1.7 1998/01/05 00:20:29 dustin Exp $
+// $Id: redir.conf,v 1.8 1998/01/06 08:03:29 dustin Exp $
 
 etc {
     debug=0;
@@ -26,6 +26,8 @@ ports {
     }
     2010 {
 	iscluster=1;
+	# This doesn't work yet
+	# algorithm=topdown;
 	cluster {
 	    clus1 {
 		remote_addr=keyhole.west.spy.net;
