--- a/c/c/net/tcp/redirect/configure.in
+++ b/c/c/net/tcp/redirect/configure.in
@@ -1,10 +1,11 @@
-dnl $Id: configure.in,v 1.2 1998/01/02 06:49:58 dustin Exp $
+dnl $Id: configure.in,v 1.3 1998/01/10 03:33:40 dustin Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(redirect.h)
 AC_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
 AC_PROG_CC(-g)
+AC_PATH_PROG(LINT, lint, /bin/lint, $PATH)
 AC_PROGRAM_CHECK(UNAMEPROG, uname, uname, )
 AC_PROGRAM_CHECK(TRPROG, tr, tr, )
 AC_PROGRAM_CHECK(SEDPROG, sed, sed, )
