Damn, that sucked.
Author: dustin
Date: 1998/01/31 00:10:51
   Damn, that sucked.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-107

--- a/c/c/net/tcp/redirect/Makefile.in
+++ b/c/c/net/tcp/redirect/Makefile.in
@@ -1,16 +1,19 @@
 # Copyright (c) 1998  Dustin Sallings
-# $Id: Makefile.in,v 1.4 1998/01/10 03:33:37 dustin Exp $
+# $Id: Makefile.in,v 1.5 1998/01/31 00:10:51 dustin Exp $
 
 SHELL=/bin/sh
 CC=@CC@
+LINT=lint
 INCLUDES=-Ireadconfig -I.
 DEFINES=
 CFLAGS=@CFLAGS@ $(INCLUDES) $(DEFINES)
 LIBS=@LIBS@ readconfig/readconfig.a
 LDFLAGS=$(LIBS)
 
+.SUFFIXES: .c .o .l .a .ln
 OBJS=main.o sockets.o cluster.o
 SRCS=main.c sockets.c cluster.c
+LINTS=main.ln sockets.ln cluster.ln
 EXES=redirect
 AUTOJUNK=config.h config.status config.cache config.log Makefile
 
