--- a/c/c/net/tcp/redirect/redir.conf
+++ b/c/c/net/tcp/redirect/redir.conf
@@ -1,12 +1,18 @@
 // Dustin's IP redirector configuration
 // Copyright (c) 1998  Dustin Sallings
-// $Id: redir.conf,v 1.9 1998/01/31 00:10:57 dustin Exp $
+// $Id: redir.conf,v 1.10 1998/06/19 18:30:15 dustin Exp $
 
 etc {
     debug=5;
+    // sourceaddr="verde";
 }
 
 ports {
+    6666 {
+	remote_addr=localhost;
+	remote_port=3128;
+    }
+
     2343 {
 	remote_addr=secret.spy.net;
 	remote_port=22;
