moved test out into test.c
Author: dustin
Date: 1998/06/21 21:56:42

changed names to start with rad_

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-129

--- a/c/c/net/udp/radius/client/Makefile
+++ b/c/c/net/udp/radius/client/Makefile
@@ -1,4 +1,8 @@
 CFLAGS=-g
+RM=rm -f
 
-radius: radius.o md5.o
-	$(CC) -o $@ radius.o md5.o
+test: radius.o md5.o test.o
+	$(CC) -o $@ radius.o md5.o test.o
+
+clean:
+	$(RM) test radius.o md5.o test.o
