Added mymalloc stuff, and an init function.
Author: dustin
Date: 1998/06/22 00:07:30

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-130

--- a/c/c/net/udp/radius/client/Makefile
+++ b/c/c/net/udp/radius/client/Makefile
@@ -1,8 +1,8 @@
-CFLAGS=-g
+CFLAGS=-g -DMYMALLOC
 RM=rm -f
 
-test: radius.o md5.o test.o
-	$(CC) -o $@ radius.o md5.o test.o
+test: radius.o md5.o test.o mymalloc.o
+	$(CC) -o $@ radius.o md5.o test.o mymalloc.o
 
 clean:
-	$(RM) test radius.o md5.o test.o
+	$(RM) test radius.o md5.o test.o mymalloc.o
