--- a/c/c/net/pcap/guinness/Makefile
+++ b/c/c/net/pcap/guinness/Makefile
@@ -1,4 +1,4 @@
-CFLAGS=-I/usr/local/include -I/usr/people/dustin/prog/c/net/udp/mbk/mbkd
-generic: filter.o main.o
-	cc -o filter filter.o main.o -lpcap \
-		/usr/people/dustin/prog/c/net/udp/mbk/mbkd/libmbk.a
+CFLAGS=-Wall -I/usr/local/include -I/home/dustin/prog/c/net/udp/mbk/mbkd
+generic: filter.o main.o netbsd.o
+	cc -o filter filter.o main.o netbsd.o -lpcap \
+		/home/dustin/prog/c/net/udp/mbk/mbkd/libmbk.a -lkvm
