Fixed the damned Makefile
Author: dustin
Date: 1998/11/11 06:59:49
	Fixed the damned Makefile.in to actually use the stuff configure
found.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-188

--- a/c/c/net/tcp/hcp/Makefile.in
+++ b/c/c/net/tcp/hcp/Makefile.in
@@ -1,8 +1,9 @@
-DEFINES=-DUSE_SSLEAY
-INCLUDES=-I/usr/local/ssl/include
-LIBS=-L/usr/local/ssl/lib -lssl -lcrypto
-CFLAGS=$(DEFINES) $(INCLUDES) -O2
+CFLAGS=@CFLAGS@
+LIBS=@LIBS@
 LDFLAGS=$(LIBS)
 
 httppost: http.o post.o
 	$(CC) -o $@ http.o post.o $(LDFLAGS)
+
+clean:
+	rm -f http.o post.o httppost
