Look for snprintf and vsnprintf
Author: dustin
Date: 1998/11/11 07:06:32

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-191

--- a/c/c/net/tcp/hcp/configure.in
+++ b/c/c/net/tcp/hcp/configure.in
@@ -28,6 +28,6 @@ AC_TYPE_SIZE_T
 
 dnl Checks for library functions.
 AC_TYPE_SIGNAL
-AC_CHECK_FUNCS(socket strdup)
+AC_CHECK_FUNCS(socket strdup snprintf vsnprintf)
 
 AC_OUTPUT(Makefile)
