Added Host thing so we can send to sites that run more than
Author: dustin
Date: 1998/11/11 08:05:27

one web server on a machine with a single IP address.

Changed name to hcp and stuck the URL at the end.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-199

--- a/c/c/net/tcp/hcp/Makefile.in
+++ b/c/c/net/tcp/hcp/Makefile.in
@@ -2,8 +2,8 @@ CFLAGS=@CFLAGS@ @DEFS@
 LIBS=@LIBS@
 LDFLAGS=$(LIBS)
 
-httppost: http.o post.o
+hcp: http.o post.o
 	$(CC) -o $@ http.o post.o $(LDFLAGS)
 
 clean:
-	rm -f http.o post.o httppost
+	rm -f http.o post.o hcp
