I request it work a little better.
Author: dustin
Date: 1999/05/08 04:23:57

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-232

--- a/c/c/dlopen/Makefile
+++ b/c/c/dlopen/Makefile
@@ -1,6 +1,7 @@
-LDFLAGS=-lc
+LDFLAGS=# -lc
 EXES=dltest
-JUNK=libtest.so *.o $(EXES) *~
+CFLAGS=-fPIC
+JUNK=libtest.so *.o $(EXES) *~ *.core
 
 all: dltest libtest
 
@@ -8,7 +9,7 @@ dltest: dltest.o
 	$(CC) -o $@ dltest.o $(LDFLAGS)
 
 libtest: libtest.o
-	ld -shared -o libtest.so libtest.o
+	ld -x -shared -o libtest.so libtest.o
 
 clean:
 	rm -f $(JUNK)
