--- a/c/c/net/numlookup/Makefile
+++ b/c/c/net/numlookup/Makefile
@@ -1,4 +1,13 @@
 CFLAGS=-g -DMYMALLOC
 
-parselist: parselist.o mymalloc.o
-	$(CC) -o parselist parselist.o mymalloc.o
+all: parselist libparselist.so
+
+parselist: parselist.o
+	$(CC) -o parselist parselist.o
+
+libparselist.so: libparselist.o mymalloc.o
+	rm -f libparselist.so
+	$(LD) -x -shared -o libparselist.so libparselist.o mymalloc.o
+
+clean:
+	rm -f parselist parselist.o mymalloc.o
