--- a/c/c/net/numlookup/configure.in
+++ b/c/c/net/numlookup/configure.in
@@ -2,6 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(mymalloc.c)
 
 dnl Checks for programs.
+AC_PROG_CC(-fPIC)
 
 dnl Checks for libraries.
 
@@ -12,6 +13,11 @@ AC_CHECK_HEADERS(limits.h syslog.h unistd.h)
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
+
+OLDCFLAGS=$CFLAGS
+CFLAGS="$CFLAGS -fPIC"
+AC_CACHE_VAL(check_pic,AC_TRY_COMPILE([],[return(0);
+],CFLAGS="$OLDCFLAGS -fPIC",CFLAGS="$OLDCFLAGS"))
 
 dnl Checks for library functions.
 AC_CHECK_FUNCS(strdup strspn sprintf snprintf vsnprintf vsprintf)
