Use 33 hash buckets instead of a growing array.
Author: dustin
Date: 1999/05/08 21:17:49

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-242

--- a/c/c/net/numlookup/Makefile.in
+++ b/c/c/net/numlookup/Makefile.in
@@ -7,9 +7,9 @@ all: parselist libparselist.so
 parselist: parselist.o
 	$(CC) -o parselist parselist.o
 
-libparselist.so: libparselist.o mymalloc.o
+libparselist.so: libparselist.o mymalloc.o hash.o
 	rm -f libparselist.so
-	$(LD) -x -shared -o libparselist.so libparselist.o mymalloc.o
+	$(LD) -x -shared -o libparselist.so libparselist.o mymalloc.o hash.o
 
 clean:
 	rm -f parselist parselist.o mymalloc.o
