Cleanup, gotta see the memory debug go.
Author: dustin
Date: 1999/05/08 21:32:16

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-243

--- a/c/c/net/numlookup/Makefile.in
+++ b/c/c/net/numlookup/Makefile.in
@@ -1,15 +1,19 @@
 CFLAGS=@CFLAGS@ @DEFS@ -DMYMALLOC
 LIBS=@LIBS@
 LDFLAGS=$(LIBS)
+OBJS=libparselist.o mymalloc.o hash.o parselist.o
+MYLIBS=libparselist.so
+EXES=parselist
 
 all: parselist libparselist.so
 
-parselist: parselist.o
+parselist: parselist.o parselist.h
+	rm -f parselist
 	$(CC) -o parselist parselist.o
 
-libparselist.so: libparselist.o mymalloc.o hash.o
+libparselist.so: libparselist.o mymalloc.o hash.o parselist.h
 	rm -f libparselist.so
 	$(LD) -x -shared -o libparselist.so libparselist.o mymalloc.o hash.o
 
 clean:
-	rm -f parselist parselist.o mymalloc.o
+	rm -f $(EXES) $(MYLIBS) $(OBJS)
