--- a/c/c/net/numlookup/configure.in
+++ b/c/c/net/numlookup/configure.in
@@ -2,7 +2,8 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(mymalloc.c)
 
 dnl Checks for programs.
-AC_PROG_CC(-fPIC)
+AC_PROG_CC(-g)
+AC_PATH_PROG(LINT, lint, /bin/lint, $PATH)
 
 dnl Checks for libraries.
 
