Trying to find the perfect lint.
Author: dustin
Date: 1999/05/08 22:04:54

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-246

--- a/c/c/net/numlookup/Makefile.in
+++ b/c/c/net/numlookup/Makefile.in
@@ -24,7 +24,7 @@ clean:
 	rm -f $(EXES) $(MYLIBS) $(OBJS) $(LINTS)
 
 lint: $(LINTS)
+	$(LINT) $(LINTFLAGS) $(LINTS)
 
 .c.ln: $<
 	$(LINT) $(LINTFLAGS) -c $<
-
