Gotta keep up with LDFLAGS when linking.
Author: dustin
Date: 1999/05/10 18:22:28

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-254

--- a/c/c/net/numlookup/Makefile.in
+++ b/c/c/net/numlookup/Makefile.in
@@ -15,7 +15,7 @@ all: parselist libparselist.so
 
 parselist: parselist.o parselist.h
 	rm -f parselist
-	$(CC) -o parselist parselist.o
+	$(CC) -o parselist parselist.o $(LDFLAGS)
 
 libparselist.so: libparselist.o mymalloc.o hash.o parselist.h
 	rm -f libparselist.so
