Make sure everything logs to the right place.
Author: dustin
Date: 1999/05/10 22:53:07

Turn up the lifetimes so things can live longer.

Move the config and library files.

imported from: dustin@spy.net--projects/snippets--c--1.0--patch-256

--- a/c/c/net/numlookup/Makefile.in
+++ b/c/c/net/numlookup/Makefile.in
@@ -2,7 +2,7 @@ CFLAGS=@CFLAGS@ @DEFS@ -DMYMALLOC
 LIBS=@LIBS@
 LDFLAGS=$(LIBS)
 MAKESO=@MAKESO@
-OBJS=libparselist.o mymalloc.o hash.o parselist.o
+OBJS=libparselist.o mymalloc.o hash.o parselist.o log.o
 MYLIBS=libparselist.so
 EXES=parselist
 LINT=@LINT@
