Make the makefile make the stuff.
Author: dustin
Date: 1999/05/19 07:59:51

imported from: dustin@spy.net--projects/snippets--eiffel--1.0--patch-10

--- a/eiffel/eiffel/pg/Makefile
+++ b/eiffel/eiffel/pg/Makefile
@@ -1,11 +1,15 @@
-E=smalleiffel compile
+E=smalleiffel
+EC=$(E) compile
 
 EFLAGS=-g -I/usr/local/pgsql/include
 LFLAGS=-L/usr/local/pgsql/lib -lpq
 
 pgtest: pg.e pg_cstuff.c
-	$(E) pg -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
+	$(EC) pg -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
+
+short:
+	$(E) short pg
 
 clean:
-	smalleiffel clean pg
+	$(E) clean pg
 	rm -f pgtest
