A little better postgres support.
Author: dustin
Date: 1999/05/25 06:45:11

imported from: dustin@spy.net--projects/snippets--eiffel--1.0--patch-16

--- a/eiffel/eiffel/pg/Makefile
+++ b/eiffel/eiffel/pg/Makefile
@@ -4,12 +4,12 @@ EC=$(E) compile
 EFLAGS=-g -I/usr/local/pgsql/include
 LFLAGS=-L/usr/local/pgsql/lib -lpq
 
-pgtest: pg.e pg_cstuff.c
-	$(EC) pg -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
+pgtest: pgtest.e pg.e pg_cstuff.c
+	$(EC) pgtest -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
 
 short:
 	$(E) short pg
 
 clean:
-	$(E) clean pg
+	$(E) clean pgtest
 	rm -f pgtest
