Hmm... It's close...
Author: dustin
Date: 1999/05/27 15:54:39

imported from: dustin@spy.net--projects/snippets--eiffel--1.0--patch-34

--- a/eiffel/eiffel/photo/Makefile
+++ b/eiffel/eiffel/photo/Makefile
@@ -1,8 +1,8 @@
 E=smalleiffel
 EC=$(E) compile
 
-EFLAGS=-g -I/usr/local/pgsql/include
-LFLAGS=-L/usr/local/pgsql/lib -rpath /usr/local/pgsql/lib/ -lpq
+EFLAGS=-g -I/usr/local/pgsql/include -funsigned-char
+LFLAGS=-L/usr/local/pgsql/lib -lpq
 CSTUFF=/home/dustin/prog/eiffel/pg/pg_cstuff.c
 
 getpic: getpic.e
