Fixed Id tag and added licensing info.
Author: dustin
Date: 1999/05/28 04:50:53

imported from: dustin@spy.net--projects/snippets--eiffel--1.0--patch-45

--- a/eiffel/eiffel/pg/Makefile
+++ b/eiffel/eiffel/pg/Makefile
@@ -1,8 +1,10 @@
 E=smalleiffel
 EC=$(E) compile
 
+RPATH=-rpath /usr/local/pgsql/lib
+
 EFLAGS=-g -I/usr/local/pgsql/include
-LFLAGS=-L/usr/local/pgsql/lib -lpq
+LFLAGS=-L/usr/local/pgsql/lib $(RPATH) -lpq
 
 pgtest: pgtest.e pg.e pg_cstuff.c
 	$(EC) pgtest -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
