Gotta be pretty.
Author: dustin
Date: 1999/05/31 21:37:18

imported from: dustin@spy.net--projects/snippets--eiffel--1.0--patch-50

--- a/eiffel/eiffel/photo/Makefile
+++ b/eiffel/eiffel/photo/Makefile
@@ -4,12 +4,15 @@ EC=$(E) compile
 RPATH=-rpath /usr/local/pgsql/lib
 
 EFLAGS=-g -I/usr/local/pgsql/include
-LFLAGS=-L/usr/local/pgsql/lib $(RPATH) -lpq
+LFLAGS=-L/usr/local/pgsql/lib $(RPATH) -lpq -lgen
 CSTUFF=/home/dustin/prog/eiffel/pg/pg_cstuff.c
 
 getpic: getpic.e
 	$(EC) $@ -o $@ $(EFLAGS) $(CSTUFF) $(LFLAGS)
 
+test: test.e photo.e
+	$(EC) $@ -o $@ $(EFLAGS) $(CSTUFF) $(LFLAGS)
+
 clean:
-	$(E) clean getpic
-	rm -f getpic
+	$(E) clean getpic test
+	rm -f getpic test
