--- a/eiffel/eiffel/misc/Makefile
+++ b/eiffel/eiffel/misc/Makefile
@@ -3,7 +3,7 @@ EC=$(E) compile
 
 RPATH=-rpath /usr/local/pgsql/lib
 
-EFLAGS=-g -I/usr/local/pgsql/include
+EFLAGS=-g -I/usr/local/pgsql/include # -debug_check
 LFLAGS=-L/usr/local/pgsql/lib $(RPATH) -lpq
 CSTUFF=/home/dustin/prog/eiffel/pg/pg_cstuff.c
 
