Added dist stuff.
Author: dustin
Date: 1999/06/06 22:42:18

Cleaned up documentation, did proper assertions, etc...

added next_entry

imported from: dustin@spy.net--projects/snippets--eiffel--1.0--patch-75

--- a/eiffel/eiffel/ldap/Makefile
+++ b/eiffel/eiffel/ldap/Makefile
@@ -6,13 +6,28 @@ RPATH=-rpath /usr/local/lib
 EFLAGS=-g -DOPENLDAP=1 -I/usr/local/include -debug_check
 LFLAGS=-L/usr/local/lib $(RPATH) -llber -lldap
 
-FILES=Makefile
+FILES=Makefile  ldaptest.e ldap.e openldap_stuff.c openldap_stuff.h
+
+DEST=/home/dustin/public_html/eiffel/eiffeldap.tgz
+
+# Begin targets
 
 ldaptest: ldaptest.e ldap.e openldap_stuff.c
 	$(EC) ldaptest -o $@ $(EFLAGS) openldap_stuff.c $(LFLAGS)
 
 short:
 	$(E) short ldap
+
+dist: eiffeldap.tgz
+
+eiffeldap.tgz: $(FILES)
+	mkdir eiffeldap
+	cp ../forum.txt eiffeldap
+	cp $(FILES) eiffeldap
+	tar cvf - eiffeldap | gzip -9vc > $@
+	rm -rf eiffeldap
+	cp eiffeldap.tgz $(DEST)
+	chmod 644 $(DEST)
 
 clean:
 	$(E) clean ldaptest
