Making it easier to move to machines with different pat...
Author: dustin
Date: 1999/09/15 04:38:26

Making it easier to move to machines with different paths to java.

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-68

--- a/java/java/rmi/objectserver/Makefile
+++ b/java/java/rmi/objectserver/Makefile
@@ -1,8 +1,9 @@
 # Makefile for RHash, remote object server stuff.
 
-JAR=/usr/pkg/java/bin/jar
-JAVAC=/usr/pkg/java/bin/javac
-RMIC=/usr/pkg/java/bin/rmic
+JAVAHOME=/usr/local/jdk1.1.8
+JAR=$(JAVAHOME)/bin/jar
+JAVAC=$(JAVAHOME)/bin/javac
+RMIC=$(JAVAHOME)/bin/rmic
 
 CLASSES=Example.class RHash.class RObject.class RObjectImpl.class \
 	RObjectImpl_Skel.class RObjectImpl_Stub.class
