Do a finalization before I exit.
Author: dustin
Date: 1999/09/15 08:00:56

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-70

--- a/java/java/rmi/objectserver/Makefile
+++ b/java/java/rmi/objectserver/Makefile
@@ -1,6 +1,7 @@
 # Makefile for RHash, remote object server stuff.
 
-JAVAHOME=/usr/local/jdk1.1.8
+# JAVAHOME=/usr/local/jdk1.1.8
+JAVAHOME=/usr/pkg/java
 JAR=$(JAVAHOME)/bin/jar
 JAVAC=$(JAVAHOME)/bin/javac
 RMIC=$(JAVAHOME)/bin/rmic
